Added form rows for each of the fields in the submit tab to get the delivery info

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -18,7 +18,12 @@ input#datasetFilePath,
 input#datasetFileUrl,
 input#metadataFileUpload,
 input#metadataFilePath,
-input#metadataFileUrl
+input#metadataFileUrl,
+input#harddriveFileSize,
+input#harddriveAddresseeName,
+input#harddriveAddresseeEmail,
+input#harddriveAddresseePhone,
+input#harddriveDeliveryAddress
 {
     width:100%;
 }
