--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-processed.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-processed.email.twig
@@ -19,7 +19,7 @@ Thank you for submitting your dataset to the Gulf of Mexico Research Initiative 
         <td style='border: 1px solid black; padding: 3px; vertical-align: top; width: 400px;'>{{ datasetSubmission.title }}</td>
         <td style='border: 1px solid black; padding: 3px; vertical-align: top;'>{{ type == 'dataset' ? datasetSubmission.datasetFileName : datasetSubmission.metadataFileName }}</td>
         <td style='border: 1px solid black; padding: 3px; vertical-align: top;'>{{ datasetSubmission.dataset.udi }}</td>
-        <td style='border: 1px solid black; padding: 3px; vertical-align: top;'><a href="{{ datalandUri }}">{{ datalandUri }}</a></td>
+        <td style='border: 1px solid black; padding: 3px; vertical-align: top;'><a href="{{ datalandUrl }}">{{ datalandUrl }}</a></td>
     </tr>
 </table>
 <br>
@@ -39,7 +39,7 @@ The following {{ type }} file has been processed and can now be viewed:
 Dataset Title: {{ datasetSubmission.title }}
 Dataset Filename: {{ type == 'dataset' ? datasetSubmission.datasetFileName : datasetSubmission.metadataFileName }}
 UDI: {{ datasetSubmission.dataset.udi }}
-Link: {{ datalandUri }}
+Link: {{ datalandUrl }}
 
 If you have any questions or concerns please contact GRIIDC at griidc@gomri.org.
 
