Added required * in front of the text fields in the request external hard drive tab

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission-uploader.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission-uploader.css
@@ -47,3 +47,9 @@
 #uploader-remaining {
     margin-left: 10px;
 }
+
+.requiredDeliveryInfo::before{
+    font-weight: bold;
+    color: #FF0000;
+    content: "*";
+}
