--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/Account.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/Account.html.twig
@@ -33,8 +33,8 @@
                 <ul>
                     <li>Unauthorized use is prohibited.</li>
                     <li>Usage may be subject to security testing and monitoring.</li>
-                    <li>Abuse is subject to criminal prosecution.</li>
-                    <li>No expectation of privacy except as otherwise provided by applicable privacy laws.</li>
+                    <li>Misuse is subject to criminal prosecution.</li>
+                    <li>Users have no expectation of privacy except as otherwise provided by applicable privacy laws.</li>
                     <li>These warnings are required in accordance with Texas Administrative Code 202 as administered by the Texas Department of Information Resources. Reference Chapter 33, Texas Penal Code.</li>
                 </ul>
             </td>
