Added a new transfer type for the Hard drive upload

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -18,7 +18,7 @@
                 <li datasetFileTransferType="upload"><a href="#tabs-1">Direct Upload</a></li>
                 <li datasetFileTransferType="SFTP"><a href="#tabs-2">Upload via SFTP/GridFTP</a></li>
                 <li datasetFileTransferType="HTTP"><a href="#tabs-3">Request Pull from HTTP/FTP Server</a></li>
-                <li datasetFileTransferType="upload"><a href="#tabs-4">Request External Hard Drive</a></li>
+                <li datasetFileTransferType="hardDrive"><a href="#tabs-4">Request External Hard Drive</a></li>
             </ul>
 
             <div id="tabs-1"> <!-- Direct Upload -->
