Undo changes from registry.css (This is an unused file in the project)

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -18,12 +18,7 @@ input#datasetFilePath,
 input#datasetFileUrl,
 input#metadataFileUpload,
 input#metadataFilePath,
-input#metadataFileUrl,
-input#harddriveFileSize,
-input#harddriveAddresseeName,
-input#harddriveAddresseeEmail,
-input#harddriveAddresseePhone,
-input#harddriveDeliveryAddress
+input#metadataFileUrl
 {
     width:100%;
 }
