--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -137,7 +137,8 @@
                                     <img class="info" src="{{ asset_url }}">
                                     {% endimage %}
                                     <div class="tooltiptext">
-                                        <p>Please provide the following details to deliver the hard drive.</p>
+                                        <p>This information is required so that GRIIDC can mail the hard drive to the correct address.Please provide the full delivery address including street name, city, state/province, and postal/zip code.
+                                        </p>
                                         {#<p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>#}
                                     </div>
                                 </span>
@@ -156,7 +157,8 @@
                                 <img class="info" src="{{ asset_url }}">
                                 {% endimage %}
                                 <div class="tooltiptext">
-                                    <p>Please select from your local machine the README file for the dataset you are submitting.</p>
+                                    <p>Please create a readme file or file listing that describes the files that will be transferred to the external hard drive. Please describe any folder and file organization or structure, and explain folder and file naming conventions if used
+                                    </p>
                                     {#<p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>#}
                                 </div>
                             </span>
