--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -46,7 +46,7 @@
     padding: 5px;
 }
 
-input[type=text],select,textarea {
+input[type=text],select,textarea,input[type=email] {
     width:90%;
 }
 
