Changed the wording for the email header

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.dataset-resubmitted.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.dataset-resubmitted.email.twig
@@ -1,4 +1,4 @@
-{% block subject 'New dataset file for ' ~ datasetSubmission.dataset.udi %}
+{% block subject 'New submission for dataset ' ~ datasetSubmission.dataset.udi %}
 
 {% block body_html %}
     A dataset file for {{ datasetSubmission.dataset.udi }} has been re-submitted:<br>
