Convert newline to br in delivery info

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.external-harddrive-requested.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.external-harddrive-requested.email.twig
@@ -10,7 +10,7 @@ An external hard drive request for dataset {{ datasetSubmission.dataset.udi }} h
     Addressee Phone: {{ datasetSubmission.harddriveAddresseePhone }}<br>
     Addressee Delivery Information:<br>
     {{ datasetSubmission.harddriveAddresseeName }}<br>
-    {{ datasetSubmission.harddriveDeliveryAddress }}
+    {{ datasetSubmission.harddriveDeliveryAddress |nl2br }}
 {% endblock %}
 
 {% block body_text %}
