Added individual fine-uploader for external hard drive

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -40,7 +40,7 @@
                                 </div>
                             </span>
                             <td width="*">
-                                <div class="file-uploader"></div>
+                                <div id="file-uploader"></div>
                             </td>
                         </tr>
                     </table>
@@ -168,7 +168,7 @@
                                 GRIIDC
                             </p>
 
-                                <div class="file-uploader"></div>
+                                <div id="readmefile-uploader"></div>
                             </td>
                         </tr>
                     </table>
