Minor text revisions

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -127,7 +127,7 @@
 
             <div id="tabs-4"> <!-- Request External Hard Drive -->
                 Use this method to request an external hard drive to transfer very large datasets (greater than 1 TB) to
-                GRIIDC
+                GRIIDC.
                 <fieldset>
                     <table class="tab-table">
                         <tr>
@@ -137,7 +137,7 @@
                                     <img class="info" src="{{ asset_url }}">
                                     {% endimage %}
                                     <div class="tooltiptext">
-                                        <p>This information is required so that GRIIDC can mail the hard drive to the correct address.Please provide the full delivery address including street name, city, state/province, and postal/zip code.
+                                        <p>This information is required so that GRIIDC can mail the hard drive to the correct address. Please provide the full delivery address including street name, city, state/province, and postal/zip code.
                                         </p>
                                         {#<p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>#}
                                     </div>
@@ -157,15 +157,14 @@
                                 <img class="info" src="{{ asset_url }}">
                                 {% endimage %}
                                 <div class="tooltiptext">
-                                    <p>Please create a readme file or file listing that describes the files that will be transferred to the external hard drive. Please describe any folder and file organization or structure, and explain folder and file naming conventions if used
+                                    <p>Please create a readme file or file listing that describes the files that will be transferred to the external hard drive. Please describe any folder and file organization or structure, and explain folder and file naming conventions if used.
                                     </p>
-                                    {#<p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>#}
                                 </div>
                             </span>
                             <p>
                                 Please provide a file listing or readme file describing what files will be provided on
                                 the hard drive. This file should also be provided on the hard drive you receive from
-                                GRIIDC
+                                GRIIDC.
                             </p>
 
                                 <div class="file-uploader"></div>
