--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -39,15 +39,19 @@
 
 {% block body %}
 
-<h1>Dataset Review</h1>
-
 {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
-<div class="cleair">
-    <fieldset>
-        <b>Submitted Datasets</b>
-        {% include 'PelagosAppBundle:DatasetReview:datasets-submitted.html.twig' %}
-    </fieldset>
-</div>
+    <h1>Dataset Review</h1>
+    <div class="cleair">
+        <fieldset>
+            <b>Submitted Datasets</b>
+            {% include 'PelagosAppBundle:DatasetReview:datasets-submitted.html.twig' %}
+        </fieldset>
+    </div>
+{% elseif not is_granted('ROLE_DATA_REPOSITORY_MANAGER') and is_granted('IS_AUTHENTICATED_FULLY') %}
+    <div class="messages error">
+        <h2 class="element-invisible">Error message</h2>
+        This page is only accessible by Data Repository Managers.
+    </div>
 {% else %}
     <div class="messages warning">
             <h2 class="element-invisible">Warning message</h2>
