Revert "Merge pull request #1273 in PELAGOS/pelagos from feature/PELAGOS-2976-create-separate-file-uploader to develop"
This reverts commit 6fa173212e093d0af8ff4cc9e0abb7e75f45cdf2, reversing
changes made to 237da9b3ec74766817275a2d73d97c4426c5c2b0.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -40,7 +40,7 @@
                                 </div>
                             </span>
                             <td width="*">
-                                <div id="file-uploader"></div>
+                                <div class="file-uploader"></div>
                             </td>
                         </tr>
                     </table>
@@ -167,7 +167,7 @@
                                 GRIIDC.
                             </p>
 
-                                <div id="readmefile-uploader"></div>
+                                <div class="file-uploader"></div>
                             </td>
                         </tr>
                     </table>
