--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -44,6 +44,13 @@
 
 {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
     {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
+    {% if dataset is null %}
+    <div class="messages warning">
+        <h2 class="element-invisible">Status message</h2>
+        Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+    </div>
+        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+    {% endif %}
     <h1>Dataset Review</h1>
     <div class="cleair">
         <fieldset>
