Moved include submitted datasets twig to form twig

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
@@ -18,7 +18,8 @@
         </form>
     </fieldset>
     <fieldset>
-        <b>Approved Dataset Information Forms</b>
-        {% include "PelagosAppBundle:DatasetSubmission:datasets-approved-difs.html.twig" %}
+            <b>Submitted Datasets</b>
+            {% include 'PelagosAppBundle:DatasetReview:datasets-submitted.html.twig' %}
     </fieldset>
+
 </div>
