--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -44,14 +44,16 @@
 
 {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
     <h1>Dataset Review</h1>
-        {% if dataset is null %}
-            <div class="messages warning">
-                <h2 class="element-invisible">Status message</h2>
-                    Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-            </div>
+        {% if udi is null %}
             {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
         {% else %}
+            {% if dataset is null %}
+                <div class="messages warning">
+                    <h2 class="element-invisible">Status message</h2>
+                        Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+                </div>
             {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
+            {% endif %}
         {% endif %}
 {% elseif not is_granted('ROLE_DATA_REPOSITORY_MANAGER') and is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="messages error">
