Moved non - datatable code into new javascript file

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -31,6 +31,7 @@
     {% javascripts
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
         '@PelagosAppBundle/Resources/public/js/datasetReviewList.js'
+        '@PelagosAppBundle/Resources/public/js/datasetReview.js'
     %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
