--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -42,7 +42,6 @@
 {% endblock %}
 
 {% block body %}
-
 {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
     <h1>Dataset Review</h1>
         {% if udi is null %}
@@ -53,9 +52,24 @@
                     <h2 class="element-invisible">Status message</h2>
                         Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
                 </div>
-            {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
+            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
+                <div class="messages warning">
+                    <h2 class="element-invisible">Status message</h2>
+                        The dataset {{ udi }} has not been submitted and cannot be loaded in review mode.
+                </div>
+            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_INCOMPLETE') %}
+                <div class="messages warning">
+                    <h2 class="element-invisible">Status message</h2>
+                    The dataset {{ udi }} currently has a draft submission and cannot be loaded in review mode.
+                </div>
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_BACK_TO_SUBMITTER') %}
+                <div class="messages warning">
+                    <h2 class="element-invisible">Status message</h2>
+                    The status of dataset {{ udi }} is Back To Submitter and cannot be loaded in review mode.
+                </div>
             {% endif %}
         {% endif %}
+        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
 {% elseif not is_granted('ROLE_DATA_REPOSITORY_MANAGER') and is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="messages error">
         <h2 class="element-invisible">Error message</h2>
