--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -20,6 +20,7 @@
     {{
         add_js(
             [
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
                 '//cdn.datatables.net/1.10.7/js/jquery.dataTables.js',
                 '//cdn.datatables.net/select/1.0.1/js/dataTables.select.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
@@ -29,6 +30,7 @@
     }}
 
     {% javascripts
+        '@PelagosAppBundle/Resources/public/js/pelagosNoty.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
         '@PelagosAppBundle/Resources/public/js/datasetReviewList.js'
         '@PelagosAppBundle/Resources/public/js/datasetReview.js'
@@ -47,29 +49,13 @@
         {% if udi is null %}
             {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
         {% else %}
-            {% if dataset is null %}
-                <div class="messages warning">
-                    <h2 class="element-invisible">Status message</h2>
-                        Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-                </div>
-            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
-                <div class="messages warning">
-                    <h2 class="element-invisible">Status message</h2>
-                        The dataset {{ udi }} has not been submitted and cannot be loaded in review mode.
-                </div>
-            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_INCOMPLETE') %}
-                <div class="messages warning">
-                    <h2 class="element-invisible">Status message</h2>
-                    The dataset {{ udi }} currently has a draft submission and cannot be loaded in review mode.
-                </div>
-            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_BACK_TO_SUBMITTER') %}
-                <div class="messages warning">
-                    <h2 class="element-invisible">Status message</h2>
-                    The status of dataset {{ udi }} is Back To Submitter and cannot be loaded in review mode.
-                </div>
-            {% endif %}
+            {% for label, messages in app.session.flashbag.all %}
+                {% for message in messages %}
+                    <div class="pelagosNoty" text="{{message}}" type="{{label}}"></div>
+                {% endfor %}
+            {% endfor %}
         {% endif %}
-        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+        {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
 {% elseif not is_granted('ROLE_DATA_REPOSITORY_MANAGER') and is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="messages error">
         <h2 class="element-invisible">Error message</h2>
