--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -60,6 +60,12 @@
     <h1>Dataset Review</h1>
         {% if udi is null %}
             {% include 'PelagosAppBundle:DatasetReview:form.html.twig' %}
+        {% elseif xmlForm is not null %}
+            <div class="messages status">
+                <h2 class="element-invisible">Status message</h2>
+                    Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
+            </div>
+            {% include 'PelagosAppBundle:DatasetReview:submission-form.html.twig' %}
         {% else %}
             {% for label, messages in app.session.flashbag.all %}
                 {% for message in messages %}
