Added javascript for spatial extent

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/extent.html.twig
@@ -5,7 +5,7 @@
         of the dataset contents. If a dataset does not have a relevant location or
         time (ex. lab simulations), a short explanation is requested.
     </fieldset>
-    <div id="geoWizard" style="width:100%;height:100%;"/>
+    <div id="geoWizard" style="width:100%;height:100%;">
         <table class="tab-table">
             <tr>
                 <td valign="top" width="60%">
@@ -78,4 +78,5 @@
 
             </tr>
         </table>
+    </div>
 </fieldset>
